...
            ) {
                Row(
                    Modifier.fillMaxWidth(),
                    horizontalArrangement = Arrangement.SpaceBetween
                ) {
                    Text(
                        text = "Home",
                        style = MaterialTheme.typography.titleMedium,
                        color = Black
                    )

                    Icon(
                        painter = painterResource(id = R.drawable.ic_account),
...
